# StatCheck

./: .gitignore  LICENSE  README.md  design_doc.md  example-compose.yaml  package-lock.json
backend/: .flaskenv  .gitignore  config.py  environment.yml  pyproject.toml  requirements.txt  schema.py  schema.sql  statcheck_backend.py
backend/app/: __init__.py  data_updates.py  db.py  models.py  schema.sql  scrapers.py  updaters.py
backend/app/analytics/: expected_goals.py  test_expected_goals.py
backend/app/api/: __init__.py  api_models.py  errors.py  leaderboards.py  players.py  records.py  scores.py  standings.py  teams.py
backend/app/inserters/: __init__.py  appearances.py  events.py  games.py  players.py  ref_types.py  shifts.py  teams.py
backend/app/operations/: database.py  games.py  leaderboards.py  playground.py  records.py  updates.py
backend/app/records/: goalie_records_2.json  goalie_records_3.json  max_games.json  skater_records_2.json  skater_records_3.json
backend/app/sql/: goalie_leaderboard.sql  goalie_season_advanced.sql  goalie_season_analytics.sql  goalie_season_records.sql  goalie_season_totals.sql  max_games.sql  player_season_totals.sql  season_stats.sql  skater_leaderboard.sql  skater_on_ice.sql  skater_season_analytics.sql  skater_season_records.sql  skater_season_shooting.sql  skater_season_totals.sql
backend/app/updaters/: __init__.py  appearances.py  events.py  games.py  players.py  ref_types.py  shifts.py  teams.py
backend/migrations/versions/: 075da4675bc6_fixed_event_fields.py  5aaed4cad1d4_first_migration.py  6104f994567e_games_and_game_types_tables.py  6e5e2e7f634b_initial_migration.py  8a94a5f60ee1_fixed_team_model.py  (+7 more)
db-updates/: .dockerignore  Dockerfile  pyproject.toml
db-updates/src/: __init__.py  main.py  schemas.py
fast-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
fast-backend/alembic/: env.py
fast-backend/app/: database.py  main.py  models.py
(+247 files in other folders)
