[project]
name = "backend"
version = "0.1.0"
description = "REST API for StatCheck hockey analytics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "polars>=1.33.0",
    "pyarrow>=21.0.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "xgboost>=3.0.5",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
