[project]
name = "fast-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp[speedups]>=3.13.2",
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "fastapi[logfire,standard]>=0.121.0",
    "logfire[fastapi]>=4.15.1",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "sqlalchemy[postgresql-asyncpg]>=2.0.44",
    "uvicorn>=0.38.0",
]
